# nexus

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  WCAG-AUDIT.md  eslint.config.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
.githooks/: post-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: _build-app.yml  _build-sdk.yml  _build-ui.yml  ci.yml  nightly.yml  release-dry-run.yml  release-ui.yml  release.yml
crates/mcp-sidecar/: Cargo.toml
crates/mcp-sidecar/src/: gateway.rs  main.rs  server.rs
docs/: extension-authoring.md  plugin-authoring.md  release-checklist.md  roadmap.md  ux-design-direction.md
docs/arch/: p2p-agent-communication.md
docs/design/: ux-design-direction.md
docs/release-notes/: v0.3.0.md  v0.3.1.md  v0.5.0.md  v0.5.1.md  v0.7.0.md
docs/security/: security-audit-2026-02-12.md
docs/spec/: manifest-spec.md  metadata-api.md  permissions.md
examples/extensions/ipc-consumer/: Cargo.toml  manifest.json
examples/extensions/ipc-provider/: Cargo.toml  manifest.json
examples/extensions/sign-tool/: Cargo.toml
examples/plugins/context7-docs/: Dockerfile  package.json  plugin.json
examples/plugins/dev-playground/: Dockerfile  index.html  package.json  plugin.json  server.js
examples/plugins/permission-tester/: Dockerfile  plugin.json
plugins/hello-world/: plugin.json
plugins/hello-world/src/: server.js
plugins/permission-tester/: plugin.json
plugins/permission-tester/src/: server.js
scripts/: build-mcp-sidecar.sh  check-ui-drift.sh  generate-release-notes.sh  release-dry-run.sh  sync-version.sh
src/: App.tsx  index.css  main.tsx
src-mcp/: Cargo.toml
src-mcp/src/: gateway.rs  main.rs  server.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/nexus-registry/: Cargo.toml
src-tauri/crates/nexus-registry/src/: main.rs  schema.rs
src-tauri/crates/nexus-registry/src/commands/: add.rs  build.rs  init.rs  mod.rs  publish.rs  update.rs  validate.rs
src-tauri/src/: error.rs  lib.rs  lifecycle_events.rs  main.rs  notification.rs  update_checker.rs  util.rs  version.rs
src-tauri/src/api_keys/: mod.rs  store.rs  types.rs
src-tauri/src/audit/: mod.rs  store.rs  writer.rs
src-tauri/src/commands/: api_keys.rs  app_updater.rs  audit.rs  events.rs  extensions.rs  marketplace.rs  mcp.rs  mcp_wrap.rs  mod.rs  oauth.rs  permissions.rs  plugins.rs  registries.rs  system.rs  updates.rs
src-tauri/src/event_bus/: cloud_event.rs  dispatch.rs  executor.rs  log.rs  mod.rs  retry_worker.rs  routing.rs  store.rs  subscription.rs
src-tauri/src/extensions/: ada.rs  brazil_cache.rs  capability.rs  ipc.rs  loader.rs  manifest.rs  mod.rs  process.rs  registry.rs  signing.rs  storage.rs  validation.rs
src-tauri/src/host_api/: approval.rs  auth.rs  containers.rs  docker.rs  events.rs  extensions.rs  filesystem.rs  mcp.rs  mcp_client.rs  mcp_server.rs  meta.rs  middleware.rs  mod.rs  network.rs  nexus-theme.css  nexus_mcp.rs  process.rs  rate_limit.rs  settings.rs  storage.rs  system.rs  theme.rs
src-tauri/src/host_api/mcp/: auth.rs  builtin.rs  client.rs  mod.rs  registry.rs  server.rs  types.rs
src-tauri/src/mcp_wrap/: classify.rs  discovery.rs  generate.rs  mod.rs
src-tauri/src/oauth/: authorize.rs  consent.html  metadata.rs  mod.rs  plugin_auth.rs  registration.rs  store.rs  token.rs  types.rs  validation.rs
src-tauri/src/permissions/: checker.rs  mod.rs  rar.rs  service.rs  store.rs  types.rs
src-tauri/src/plugin_manager/: container_events.rs  dev_watcher.rs  docker.rs  health.rs  manifest.rs  mod.rs  registry.rs  storage.rs
src-tauri/src/runtime/: docker.rs  mock.rs  mod.rs
src-tauri/tests/: auth_lifecycle.rs  export_openapi.rs  extension_stderr.rs
src-tauri/tests/fixtures/: stderr_extension.rs
src/components/: ErrorBoundary.tsx  InstallOverlay.tsx
src/components/brand/: NexusLogo.tsx
src/components/extensions/: ExtensionCard.tsx  ExtensionDetail.tsx  ExtensionMarketplacePage.tsx
src/hooks/: useDevRebuild.ts  useExtensionMarketplace.ts  useExtensions.ts  useLifecycleEvents.ts  useMarketplace.ts  useOsNotification.ts  usePermissions.ts  usePlugins.ts  useUpdateEvents.ts  useUpdateScheduler.ts
src/i18n/: index.ts  types.ts
src/lib/: extensions.ts  pluginBridge.ts  pluginSurface.ts  tauri.ts  theme.ts  timeAgo.ts
src/stores/: appStore.ts  notificationStore.ts
src/types/: audit.ts  extension.ts  lifecycle.ts  mcp.ts  mcp_wrap.ts  oauth.ts  permissions.ts  plugin.ts  updates.ts  workflows.ts
test-extensions/system-info/: Cargo.toml
tools/mcp-bridge/: package-lock.json  package.json
tools/mcp-notify-test/: Cargo.toml
tools/mcp-notify-test/src/: main.rs
tools/mcp-wrap/: package.json
(+98 files in other folders)
