[package]
name = "nexus"
version = "0.1.0"
description = "A plugin-based desktop dashboard"
authors = ["danibytes"]
license = "MIT"
repository = "https://github.com/imdanibytes/nexus"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
bollard = "0.18"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tower = "0.5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
dirs = "6"
sysinfo = "0.33"
futures-util = "0.3"
tar = "0.4"
