[package]
name = "nexus"
version = "0.11.0"
description = "A plugin-based desktop dashboard"
authors = ["danibytes"]
license = "MIT"
repository = "https://github.com/imdanibytes/nexus"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
bollard = "0.20"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tower = "0.5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json"] }
thiserror = "2"
dirs = "6"
sysinfo = "0.38"
futures-util = "0.3"
tar = "0.4"
utoipa = { version = "5", features = ["axum_extras"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
async-stream = "0.3"
tokio-util = "0.7"
async-trait = "0.1"
rmcp = { version = "0.15", features = [
    "server",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "client",
    "transport-streamable-http-client-reqwest",
] }
jsonschema = "0.41"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
notify-rust = "4"
semver = "1"
serde_yaml = "0.9"
regex = "1"
glob = "0.3"
walkdir = "2"
urlencoding = "2.1.3"
subtle = "2"
url = "2"

[dev-dependencies]
tempfile = "3"
