[package]
name = "nexus-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.15", features = [
    "server",
    "transport-io",
    "client",
    "transport-streamable-http-client-reqwest",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
