[package]
name = "nexus-registry"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing Nexus plugin/extension registries"
authors = ["danibytes"]
license = "MIT"

[[bin]]
name = "nexus-registry"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.28"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
anyhow = "1"
glob = "0.3"
regex = "1"
